<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Petri\'s Nets Game</string>
    <string name="play">Gioca</string>
    <string name="hint">Inserisci il nome</string>
    <string name="player_1">Giocatore 1</string>
    <string name="insert_names">Inserisci i nomi dei giocatori:</string>
    <string name="start">Avvia</string>
    <string name="pause_1">Riprendi</string>
    <string name="pause_2">Esci</string>
    <string name="title_pause">PAUSA</string>
    <string name="warning_message">Vuoi davvero uscire? I progressi della partita verranno persi.</string>
    <string name="warning">Attenzione</string>
    <string name="disabilitated_transition">Questa transizione non è abilitata!</string>
    <string name="congratulations">Complimenti!!</string>
    <string name="popupText1">Hai concluso con un tempo di:</string>
    <string name="popupText2">Ora è il turno del Giocatore 2.</string>
    <string name="popupText3">Passa lo smartphone a:</string>
    <string name="popupText4">Quando sei pronto, clicca INIZIA</string>
    <string name="button_start">Inizia</string>
    <string name="t1">T1</string>
    <string name="t2">T2</string>
    <string name="t3">T3</string>
    <string name="t4">T4</string>
    <string name="t5">T5</string>
    <string name="t6">T6</string>
    <string name="t7">T7</string>
    <string name="t8">T8</string>
    <string name="t9">T9</string>
    <string name="player2">Giocatore 2</string>
    <string name="empty_warning">Il nome non può essere vuoto!</string>
    <string name="game_target1" tools:ignore="Typos">- L\' obiettivo del gioco è raggiungere la configurazione finale (segnata dagli stati riempiti di verde) nel minor tempo possibile</string>
    <string name="game_target2">- Dopo Che il Giocatore 1 ha completato la partita, viene segnato il suo tempo di completamento e dovrà passare lo smartphone al Giocatore 2 che per iniziare la partita dovrà cliccare il pulsante "Inizia"</string>
    <string name="game_target3" tools:ignore="Typos">- Concluso il Giocatore 2, viene segnato il suo tempo e si procede con il confronto dei tempi: il giocatore che ha realizzato il tempo più basso vince.</string>
    <string name="draw_message">Nessuno dei 2: è un Pareggio!</string>
    <string name="the_winner_is">Il Vincitore è :</string>
    <string name="rules_title">Regole</string>
    <string name="player1_start">- Inizia il Giocatore 1</string>
    <string name="player_finish_string">ha concluso con il tempo di:</string>
    <string name="restart">Restart</string>
    <string name="home">Home</string>
    <string name="click_to_exit">Clicca ancora per uscire dall\' applicazione</string>
    <string name="target_game1">* Raggiungi il posto p9 per concludere!</string>
    <string name="target_game2">* Raggiungi il posto p9 per concludere!</string>
    <string name="target_game3">* Raggiungi il posto p7 con 2 marche per concludere!</string>
    <string name="target_game4">* Raggiungi i posti p9 e p10 per concludere!</string>
    <string name="target_game5">* Raggiungi i posti p10 con 2 marche, e p4 per concludere!</string>
    <string name="finish_with">ha concluso con</string>
    <string name="peccato">Peccato</string>
    <string name="finishedWithA">Hai concluso con un</string>
    <string name="deadlock">DEADLOCK</string>
    <string name="button_play">Gioca</string>
</resources>